虚拟线程，竞价逻辑